<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.CityTransport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:transitionName="transition_login"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="-18pt"
            android:src="@drawable/header3" />

        <ImageView
            android:id="@+id/header_title"
            android:layout_width="70pt"
            android:layout_height="70pt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34pt"
            android:src="@drawable/icono" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15pt"
            android:layout_marginTop="20pt"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_back_button"
            android:layout_marginStart="10pt"
            android:layout_marginEnd="10pt">

            <Button
                android:id="@+id/aceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:layout_marginTop="12dp"
                android:backgroundTint="#E823A129"
                android:onClick="letTheUserLoggedIn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/background_main"
                android:onClick="callSignUpFromLogin"
                android:text="Create Account"
                android:textAllCaps="false"
                android:textColor="@color/black" />


            <RelativeLayout
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/aceptar"
                android:layout_marginTop="4pt"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22pt"
                    android:layout_marginTop="14pt"
                    android:layout_marginEnd="22pt">

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="28pt"
                        android:layout_height="28pt"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/img_1" />

                    <ImageView
                        android:id="@+id/google"
                        android:layout_width="26pt"
                        android:layout_height="26pt"
                        android:layout_centerInParent="true"
                        android:src="@drawable/google" />

                    <ImageView
                        android:id="@+id/microsoft"
                        android:layout_width="28pt"
                        android:layout_height="28pt"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/img" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/secondary"
                    android:layout_marginTop="2pt"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="10dp">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/background_main"
                    android:onClick="callForgetPassword"
                    android:text="@string/forget"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />


                <CheckBox
                    android:id="@+id/remember_me"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:text="@string/remember"
                    android:textColor="@color/black" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/fondo"
                android:elevation="8dp"
                android:padding="20dp"
                android:visibility="gone">


                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true" />


            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:layout_marginTop="-2pt"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>


    </RelativeLayout>


</ScrollView>